# Cry_SimpleBike

./: .gitattributes  Game.cryproject  README.md  user.cfg
Assets/: entities.xml
Assets/Scripts/Entities/Physics/: BasicEntity.lua  BasicEntity.lua.cryasset
Assets/Scripts/Utils/: EntityUtils.lua  EntityUtils.lua.cryasset
Assets/levels/: example.level.cryasset
Assets/levels/example/: example.bak  example.bak2  example.level  filelist.xml  level.pak
Assets/levels/example/layers/: Main.bak  Main.bak2  main.lyr
Assets/levels/example/leveldata/: Environment.bak  Environment.xml  Heightmap.bak  Heightmap.bak2
Assets/objects/vehicles/CROSS_BAR/: 128.dds  128.tif  CROSS_BAR.cga  CROSS_BAR.cga.cryasset  CROSS_BAR.mtl  CROSS_BAR.mtl.cryasset  CROSS_BAR_Hull.anm  CROSS_BAR_Steer.anm  CROSS_BAR_Wheel1.anm  CROSS_BAR_Wheel2.anm
Plugins/VehiclePlugin/: VehiclePlugin.cryproject
Plugins/VehiclePlugin/Code/: CMakeLists.txt  PluginDll.cpp  PluginDll.h  SimpleVehiclePluginEnv.h  StdAfx.h
Plugins/VehiclePlugin/Code/Common/Animation/: ManualAnimation.cpp  ManualAnimation.h
Plugins/VehiclePlugin/Code/Common/Components/: LocalBikeComponent.cpp  LocalBikeComponent.h  NetBikeComponent.cpp  NetBikeComponent.h
Plugins/VehiclePlugin/Code/Common/Movements/: BikeMovementBase.h  LocalBikeMovement.cpp  LocalBikeMovement.h  NetBikeMovement.cpp  NetBikeMovement.h
Plugins/VehiclePlugin/Code/Common/SimpleVehiclePluginAPI/: CommonData.h
Plugins/VehiclePlugin/Code/FGNode/: BikeNode.cpp
